# Ashglaze

./: .gitignore  CMakeLists.txt  glad.c  run.bat
include/glad/: glad.h
shaders/: coordinateAxisFrag.glsl  coordinateAxisVert.glsl  edgeFrag.glsl  edgeGeom.glsl  edgeVert.glsl  fbGeoSelectFrag.glsl  fbGeoSelectVert.glsl  meshFrag.glsl  meshVert.glsl  vertexFrag.glsl  vertexVert.glsl  wireframeFrag.glsl  wireframeVert.glsl
src/: CMakeLists.txt  camera.cpp  camera.h  framebufferGeoSelect.cpp  framebufferGeoSelect.h  main.cpp  shader.cpp  shader.h  shaderProgram.cpp  shaderProgram.h  testCubeData.h  window.cpp  window.h
src/geo/: CMakeLists.txt  edge.cpp  edge.h  face.cpp  face.h  modelObject.cpp  modelObject.h  object3D.cpp  object3D.h  object3DDefaultGeo.cpp  object3DDefaultGeo.h  objectSelection.h  primitive3D.cpp  primitive3D.h  vertex.cpp  vertex.h
src/geo/GLData/: GLData.cpp  GLData.h  GLDataEdge.cpp  GLDataEdge.h  GLDataFace.cpp  GLDataFace.h  GLDataVertex.cpp  GLDataVertex.h
src/input/: CMakeLists.txt  callbacks.cpp  callbacks.h  inputManager.cpp  inputManager.h  key.h
src/num/: CMakeLists.txt  mat4.cpp  mat4.h  mat4Transform.cpp  mat4Transform.h  num.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vecProducts.cpp  vecProducts.h
src/world/: CMakeLists.txt  coordinateAxis.cpp  coordinateAxis.h  world.h
